--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               Date Personale:
             </div>
             <div class="info_section">
-              <input type="text" placeholder="Nume Complet: (eg: Pop Cristina)" class="nume" id="nume" name="nume-complet" required>
+              <input type="text" placeholder="Nume Complet: (eg: Naomi Fitoasa Enervanta)" class="nume" id="nume" name="nume-complet" required>
               <input type="text" placeholder="Numar Telefon" class="telefon" name="numar-telefon" required>
               <input type="text" placeholder="Varsta" class="varsta" name="varsta" required>
             </div>
