--- a/index.html
+++ b/index.html
@@ -96,12 +96,14 @@
                    </div>
          </div>
     </div>
-    <section id="register" class="pad gray-bg">
+    <section id="register" class="pad">
 
         <div class="form-container">
           <div class="title">
-          ÎNSCRIE-TE
-            
+          ÎNSCRIE-TE 
+         <div>
+            <img src="images/ski.gif" alt="">
+         </div>
           </div>
 
 
