--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 <body>
     <div class="banner">
-        <div class="logo">
+        <div class="logo photo-effect">
             <img src="images/logo2.png" alt="">
         </div>
-        <div id="mountains"></div>
+        <div id="mountains" class="photo-effect"></div>
     </div>
 
     <div id="details">
