--- a/index.html
+++ b/index.html
@@ -31,19 +31,14 @@
             <div class="title">
                 LA INALTIME 5.0
             </div>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste fugit modi voluptatem dicta inventore
-                earum aut ipsam quidem soluta ab? Dolor hic nostrum culpa a voluptates, iste nihil enim laudantium eum
-                ut laboriosam natus nobis dolore. Doloremque perspiciatis quasi blanditiis nulla provident at suscipit
-                illo minus ullam in! </p>
+            <p>La înălțime 5.0 este tabăra de iarnă organizată pentru cei care își doresc câteva zile petrecute pe înălțimile munților - cât mai aproape de cer. Tema acestei tabere ne amintește că trebuie să ne trăim viața la standarde înalte iar visele și dorințele noastre trebuie să fie mărețe, onorându-L pe Dumnezeul nostru.  </p>
 
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste fugit modi voluptatem dicta inventore
-                earum aut ipsam quidem soluta ab? Dolor hic nostrum culpa a voluptates, iste nihil enim laudantium eum
-                ut laboriosam natus nobis dolore. Doloremque perspiciatis quasi blanditiis nulla provident at suscipit
-                illo minus ullam in! Porro fugiat as</p>
+            <p>Vom petrece împreună trei  zile înconjurați de peisaje frumoase, tineri speciali și momente deosebite în închinare.</p>
+            <p>Te așteptăm cu drag!</p>
 
 
             <div class="title">
-                INFORMATII
+                INFORMAȚII
             </div>
 
             <div class="row">
