--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <img src="images/logo2.png" alt="">
         </div>
         <div id="mountains" class="photo-effect"></div>
-        <a href="" class="btn banner-btn">INSCRIE-TE</a>
+        <a href="#register" class="btn banner-btn">INSCRIE-TE</a>
     </div>
 
     <div id="details">
