--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700" rel="stylesheet">
-
     <link rel="shortcut icon" type="images/ico" href="images/favico2.ico"/>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
+
+        <meta property="og:description" content="La înălțime 5.0 este tabăra de iarnă organizată pentru cei care își doresc câteva zile petrecute pe înălțimile munților - cât mai aproape de cer. Tema acestei tabere ne amintește că trebuie să ne trăim viața la standarde înalte iar visele și dorințele noastre trebuie să fie mărețe, onorându-L pe Dumnezeul nostru." />
+        <meta property="og:image" content="http://studevents.ro/images/metaBG.jpg" />
 
     <title>La Înălțime 5.0</title>
 </head>
